--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
+    "dotenv": "^10.0.0",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
