--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
     "dotenv": "^10.0.0",
+    "html-react-parser": "^1.4.0",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
